# Ride-Booking

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
alembic/: env.py
app/: __init__.py
app/api/: deps.py
app/api/middleware/: __init__.py  cors.py  logging.py  rate_limiting.py
app/api/v1/: router.py
app/api/websockets/: __init__.py  router.py
app/application/: __init__.py
app/application/commands/: __init__.py  ride_commands.py
app/application/dto/: __init__.py  ride_dto.py
app/application/queries/: __init__.py  driver_queries.py  ride_queries.py
app/application/use_cases/: __init__.py
app/domain/: __init__.py
app/domain/entities/: driver.py  payment.py  ride.py  user.py  vehicle.py
app/domain/events/: payment_events.py  ride_events.py
app/domain/repositories/: payment_repo.py  ride_repo.py  user_repo.py
app/domain/services/: eta_service.py  matching_service.py  pricing_service.py
app/domain/value_objects/: email.py  location.py  money.py  rating.py
app/infrastructure/: __init__.py
app/infrastructure/authentication/: __init__.py  hasher.py  jwt_handler.py
app/infrastructure/database/: __init__.py  session.py
app/infrastructure/maps/: __init__.py  map_service.py
app/infrastructure/messaging/: __init__.py  redis_pubsub.py
app/presentation/: app.py
backend/: seed_data.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
tests/e2e/: __init__.py  test_rider_flow.py
tests/integration/: __init__.py
tests/unit/: __init__.py
(+95 files in other folders)
